"增加发现页面json修订主题内容json"

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="heade">
         <div class="heade-top">
-            <button class="back"></button>
-            <button class="music" ></button>
+            <button class="back" href="http://www.baidu.com" type="submit"></button>
+            <button class="music"></button>
         </div> 
         <div class="head-bottom">
             <div class="blessing" >
@@ -30,6 +30,7 @@
     <div class="foot">
         <div class="foot-logo"></div>
     </div>
+    <script src="/public/deeplink.js"></script>
     <script src="/public/utils.js"></script>
     <script src="/dbridge.js"></script>
     <script src="/config.js"></script>
